CCHMC: general changes per findbugs reports